add scripts in package

--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -19,4 +19,11 @@ body {
 .container .dev1 {
   font-size: 24px;
 }
+
+.test {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
 /*# sourceMappingURL=style.prefixed.css.map */
